[tool.poetry]
name = "orderly-sdk"
version = "0.2.5"
description = "Orderly Rest and Websocket SDK"
authors = ["Akagi201 <akagi201@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "orderly_sdk", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
eth-keys = "^0.5.0"
base58 = "^2.1.1"
cryptography = "^42.0.5"
aiohttp = "^3.9.4"
requests = "^2.31.0"
types-requests = "^2.31.0.20240406"
websockets = "^12.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
mypy = "^1.9.0"
pdoc = "^14.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
