[project]
name = "orderly-sdk"
version = "0.3.0"
description = "Orderly Rest and Websocket SDK"
authors = [
    { name = "Bob Liu", email = "akagi201@gmail.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.12",
    "base58>=2.1.1",
    "cryptography>=44.0.1",
    "eth-keys>=0.6.1",
    "loguru>=0.7.3",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20241016",
    "websockets>=15.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pdoc>=15.0.1",
    "ruff>=0.9.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orderly_sdk"]
